--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@decorators/di": "^1.0.3",
-    "@decorators/express": "^2.6.0",
     "compression": "^1.7.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "module-alias": "^2.2.2",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "routing-controllers": "^0.9.0",
+    "typedi": "^0.10.0"
   }
 }
