--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "ts-node-dev --respawn --transpile-only -r dotenv/config src/index.ts",
     "build:prod": "tsc",
     "start:prod": "node -r dotenv/config dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r tsconfig-paths/register -r ts-node/register -r dotenv/config 'tests/**/*.ts'"
   },
   "repository": {
     "type": "git",
@@ -26,17 +26,26 @@
   },
   "homepage": "https://github.com/Siinos/movies-api#readme",
   "devDependencies": {
+    "@types/chai": "^4.3.3",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/mocha": "^10.0.0",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^18.11.0",
+    "@types/sinon": "^10.0.13",
+    "@types/sinon-chai": "^3.2.8",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "mocha": "^10.1.0",
     "prettier": "^2.7.1",
+    "sinon": "^14.0.1",
+    "sinon-chai": "^3.7.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.0",
