--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "module-alias": "^2.2.2",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0",
-    "typedi": "^0.10.0"
+    "typedi": "^0.10.0",
+    "winston": "^3.8.2"
   }
 }
